--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
         },
         /* 模块配置 */
         "modules" : {
-            "Share" : {}
+            "Share" : {},
+            "OAuth" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
@@ -58,7 +59,22 @@
                         "UniversalLinks" : ""
                     }
                 },
-                "push" : {}
+                "push" : {},
+                "oauth" : {
+                    "weixin" : {
+                        "appid" : "123",
+                        "appsecret" : "123",
+                        "UniversalLinks" : ""
+                    },
+                    "qq" : {
+                        "appid" : "123"
+                    },
+                    "sina" : {
+                        "appkey" : "123",
+                        "appsecret" : "123",
+                        "redirect_uri" : "123"
+                    }
+                }
             }
         }
     },
